--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack serve --open --mode development"
   },
   "keywords": [
     "javascript"
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
