--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 cache: 
-  directorioes:
+  directories:
     -~/.npm
 node_js:
   - '16'
@@ -10,7 +10,7 @@ script:
   - yarn build
 deploy:
   provider: pages
-  edge: true,
+  edge: true
   skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_TOKEN
